<resources>
    <string name="app_name">HomeSearch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Recherche</string>
    <string name="image_description">Language Description</string>

    <string name="logement">Logement</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis repudiandae, voluptatum. Accusamus eius eos error illo impedit maiores maxime necessitatibus nobis, numquam quidem quisquam recusandae repudiandae soluta sunt voluptatibus. Maxime!</string>

    <string name="menu_logements">Mes Logements</string>
    <string name="menu_explore">Explorer</string>
    <string name="menu_compte">Mon Compte</string>

    <string name="connexion_OK">Connexion réussie</string>
    <string name="connexion_Fail">Erreur de connexion</string>
    <string name="ajoutsClee_OK">Ajoute de la réservation réussie</string>
    <string name="ajoutsClee_Fail">Erreur d\'ajoute d\'une réservation</string>
    <string name="supprClee_OK">Suppresion de la réservation réussie</string>
    <string name="supprClee_Fail">Erreur de Suppresion d\'une réservation</string>
    <string name="inscription_OK">Inscription réussie</string>
    <string name="inscription_Fail">Erreur d\'inscription</string>

    <string name="Account_connexion_mdp">Mot de passe</string>
    <string name="Account_connexion_name">Nom d\'utilisateur</string>
    <string name="Account_connexion_btn">Connexion</string>
    <string name="Account_userName">Utilisateur</string>
    <string name="listClee_default_appartName">Nom de l\'appartement</string>
    <string name="listClee_default_etatPorte">Fermé</string>
    <string name="Account_inscription_btn">Inscription</string>
    <string name="listClee_default_Titre">Liste des clées</string>
    <string name="detail_appart_emptyNom">Nom de l\'appartement</string>
    <string name="detail_appart_labelAdress">Adresse</string>
    <string name="detail_appart_address">20 rue du général de gaulle , France</string>
</resources>