<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_page_acccount"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/account_extra_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/logout_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:src="@drawable/logout"/>
        <ImageButton
            android:id="@+id/edit_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:background="@color/transparent"
            android:src="@drawable/edit"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/basic_user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:visibility="invisible"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profil_userImg"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#C8C8C8"
            android:padding="10dp"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profil_userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:text="@string/Account_userName"
                android:textSize="24sp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/account_form_connexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">
        <EditText
            android:id="@+id/user_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/Account_connexion_name" />

        <EditText
            android:id="@+id/user_passwordConfirm"
            android:inputType="textPassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/Account_connexion_mdp" />

        <Button
            android:id="@+id/btn_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Account_connexion_btn" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:itemIconTint="@color/primary_color"
        app:itemTextColor="@color/secondary_color"
        app:itemRippleColor="@color/secondary_color"
        app:labelVisibilityMode="selected"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/page_explore"
            android:src="@drawable/loupe"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/page_appart"
            android:src="@drawable/home"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/page_account"
            android:src="@drawable/avatar_menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>