<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:id="@+id/home">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/search"
        app:endIconDrawable="@drawable/search"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/categorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appart_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/appartement" />

            <ImageView
                android:id="@+id/maison_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/maison" />

            <ImageView
                android:id="@+id/villa_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/villa" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/logement"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logement"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/or"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/tech_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/image_logement1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/appartement" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/texte_logement1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:maxLength="60"
                    android:text="@string/lorem" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_logement2"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/appartement" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/texte_logement2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:maxLength="60"
                    android:text="@string/lorem" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
