<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/home_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        app:endIconDrawable="@drawable/search"
        android:background="@color/dark_blue"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/categorie"
        android:layout_below="@+id/home_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/appart_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/appartement" />

            <ImageView
                android:id="@+id/maison_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/maison" />

            <ImageView
                android:id="@+id/villa_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="30dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/villa" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_logement_label"
        android:layout_below="@+id/categorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/logement"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logement"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <View
        android:id="@+id/spacer"
        android:layout_width="250dp"
        android:layout_height="2dp"
        android:layout_below="@+id/home_logement_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="15dp"
        android:background="@color/or" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="100dp"
        android:layout_below="@+id/spacer">
        <LinearLayout
            android:id="@+id/tech_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:clickable="false"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/appart_liste"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:text="teste"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:itemIconTint="@color/primary_color"
        app:itemTextColor="@color/secondary_color"
        app:itemRippleColor="@color/secondary_color"
        app:labelVisibilityMode="selected"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/page_explore"
            android:src="@drawable/loupe"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_weight="1" />
        <ImageButton
            android:id="@+id/page_account"
            android:src="@drawable/avatar_menu"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>